# SVU_industrial_AI

./: (20230905)_BIVA_exp08_10_pred_3step.ipynb  .gitignore  README.md  animPlot.py  animPlot_01.py  animPlot_02.py  industry_AI_SVU_TS_ex_01.ipynb  object_tracking.py  pyproject.toml  pytorch_LSTM_ex_02.ipynb  파이썬_데이터분석-07_(1).ipynb  파이썬_데이터분석-07_(2).ipynb  파이썬기초-01.ipynb  파이썬기초-02_기초문법_(2).ipynb  파이썬기초-03_기초문법_(3).ipynb  파이썬기초-04.ipynb  파이썬기초-05_sqlite.ipynb  파이썬기초_01.ipynb  파이썬기초_02.ipynb
CollectData/: getData.py  pgDB.py  금융_데이터_수집.ipynb
CollectData/data/: economic_books_50_SVU.xlsx  economic_books_50_SVU_02.xlsx
CollectData/tmp/: .env  dataApi.py
SVU_SCT_FIN/: KOR_BOK_API_02.ipynb  Repo_Map.pu  requirements.txt
SVU_SCT_FIN/Data/: dataset_03_S.xlsx  lagNgroup.xlsx  val_adf_test.xlsx  국내총생산에 대한 지출(원계열, 명목, 분기 및 연간)_05233031.xlsx  국내총생산에 대한 지출(원계열, 명목, 분기 및 연간)_05233042.xlsx  변수목록_d.xlsx  선행연구표_01.xlsx
SVU_SCT_FIN/Model/: ex_VECM_02.ipynb
Sound/: YTdn.py  speech_recog.py
TSA/statistics/: LSM_OLS.ipynb  TS_decompose.ipynb  VAR&VECM.ipynb  test.ipynb
Vision/: CvFace.py  det_f.py  det_p.py
Vision/OpenCV/: CvMan.py  cv_test.py
Vision/data/: ama_01_ama_01.xlsx  ama_02_ama_02.xlsx  pro_01_pro_01.xlsx  pro_02_pro_02.xlsx
Vision/mediapipe_env/: face_landmark.py  hands_landmark.py  object_detect.py  pose_landmark.py
Vision/yolo_env/: YOLOv8 YOLO-NAS 소개.md
XDA01/: .env  config.py  main.py  main_api.py  main_client.py
XDA01/DB/: crud.py  migrate.py
XDA01/MLmodels/: DLM.py
XDA01/api/: service.py
XDA01/client/: app.py
mediapipe_env/: .gitignore
mediapipe_env/source/: hands_landmark.py
tempSrc/: Credit Fraud  __ Dealing with Imbalanced Datasets.ipynb  RandomForest.ipynb  ch5_2_example.ipynb  ch5_3_example.ipynb  ch5_stats_norm.ipynb  hotdog-nothotdog.ipynb
yolo_env/: YOLOv8 YOLO-NAS 소개.md  Yolo_NAS_Tracking_exmple.ipynb  pyvenv.cfg  산업AI.pptx
파이썬_기본_예제/: Logistic_sklearn.ipynb  MNIST.py  Plot_style.ipynb  파이썬_데이터분석-04_numpy_pandas.ipynb  파이썬_데이터분석-05_DB_sqlite.ipynb  파이썬_데이터분석-06_EDA_시각화.ipynb  파이썬_데이터분석-07_(3).ipynb
(+131 files in other folders)
