[tool.poetry]
name = "svu-industrial-ai"
version = "0.1.0"
description = "It's place for study, research, andgather source together"
authors = ["Augustine77 <hugwolf77@gmail.com>"]
license = "GNU, GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pyside6 = "^6.7.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
requests = "^2.32.2"
pytz = "^2024.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
pydantic = "^2.7.1"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
torch = {version = "^2.3.0+cu121", source = "pytorch"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch"}
torchaudio = {version = "^2.3.0+cu121", source = "pytorch"}
statsmodels = "^0.14.2"
scienceplots = "^2.1.1"
psycopg2-binary = "^2.9.9"
openpyxl = "^3.1.5"
torchsummary = "^1.5.1"
tqdm = "^4.66.5"
opencv-contrib-python = "4.8.1.78"
mediapipe = "0.10.7"
pillow = "10.1.0"

[[tool.poetry.source]]
name = "pytorch"
url = "http://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
